--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.8.1
 Django==5.1
 django-js-asset==2.2.0
+gunicorn==23.0.0
+packaging==24.1
 pillow==10.4.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
+python-nginx==1.5.7
 sqlparse==0.5.1
 tzdata==2024.1
