--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.1
 django-js-asset==2.2.0
+django-modeltranslation==0.19.7
 gunicorn==23.0.0
 packaging==24.1
 pillow==10.4.0
